# books_open_api

./: .gitignore  README.md  main.py  pyproject.toml
book_api/: api_book.py  config.py
books/: api_ai.py  api_book.py  config.py  exceptions.py  typesdef.py
